objects/SCP_Certa_GC__Acciones__c.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__Accion__c</fullName>
        <label>Accion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Focus</fullName>
                </value>
                <value>
                    <fullName>Attitudes</fullName>
                </value>
                <value>
                    <fullName>Authority</fullName>
                </value>
                <value>
                    <fullName>Relationship Leverage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Descripcion__c</fullName>
        <label>Descripción</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-Focus-</fullName>
                </value>
                <value>
                    <fullName>Controller</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
                <value>
                    <fullName>-Attitudes-</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Burning Platform</fullName>
                </value>
                <value>
                    <fullName>Statu Quo</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>-Authority / Influence-</fullName>
                </value>
                <value>
                    <fullName>A- I-</fullName>
                </value>
                <value>
                    <fullName>A- I+</fullName>
                </value>
                <value>
                    <fullName>A+ I-</fullName>
                </value>
                <value>
                    <fullName>A+ I+</fullName>
                </value>
                <value>
                    <fullName>-Relationship Leverage-</fullName>
                </value>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Mala</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Acciones</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>